--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "bcrypt": "^1.0.3",
     "bulma": "^0.6.1",
     "bulma_scss": "^0.3.0",
     "meteor-node-stubs": "^0.3.2",
